--- a/portfolio.html
+++ b/portfolio.html
@@ -17,110 +17,118 @@
     <header>
       <a href="index.html" class="logo-top">WebStudio</a>
       <nav>
-        <ul>
-          <li class="nav-1" lang="pl">
-            <a href="index.html" title="Go to Agencja">Agencja</a>
+        <ul class="navigation">
+          <li>
+            <a href="index.html" class="nav-1">Agencja</a>
           </li>
-          <li class="nav-2" lang="pl">
-            <a href="portfolio.html">Portfolio</a>
+          <li>
+            <a href="portfolio.html" class="nav-2">Portfolio</a>
           </li>
-          <li class="nav-3" lang="pl"><a href="#">Kontakt</a></li>
+          <li><a href="#" class="nav-3">Kontakt</a></li>
         </ul>
       </nav>
-      <ul class="contact-top">
-        <li>
-          <a class="head-address-1" href="mailto:info@devstudio.com"
-            >info@devstudio.com</a
-          >
-        </li>
-        <li>
-          <a class="head-address-2" href="tel:+48111111111">+48111111111</a>
-        </li>
-      </ul>
-    </header>
-    <ul class="filter">
-      <li><button class="filtr-button-1" type="button">Wszystkie</button></li>
-      <li><button class="filtr-button-2" type="button">Strony</button></li>
-      <li><button class="filtr-button-3" type="button">Aplikacje</button></li>
-      <li><button class="filtr-button-4" type="button">Dizajn</button></li>
-      <li><button class="filtr-button-5" type="button">Marketing</button></li>
-    </ul>
-    <ul>
-      <li class="box-1">
-        <img src="images/weblap.jpg" alt="" width="370" />
-        <h3>Technocrack</h3>
-        <p>Strona internetowa</p>
-      </li>
-      <li class="box-2">
-        <img src="images/footbal.jpg" alt="" width="370" />
-        <h3>Grafika New Orlean vs Golden Star</h3>
-        <p>Dizajn</p>
-      </li>
-      <li class="box-3">
-        <img src="images/seafood.jpg" alt="" width="370" />
-        <h3>Restauracja Seafood</h3>
-        <p>Aplikacja</p>
-      </li>
-      <li class="box-4">
-        <img src="images/headphones.jpg" alt="" width="370" />
-        <h3>Projekt Prime</h3>
-        <p>Marketing</p>
-      </li>
-      <li class="box-5">
-        <img src="images/cards.jpg" alt="" width="370" />
-        <h3>Projekt Boxes</h3>
-        <p>Aplikacja</p>
-      </li>
-      <li class="box-6">
-        <img src="images/monitor.jpg" alt="" width="370" />
-        <h3>Inspiration has no Borders</h3>
-        <p>Strona internetowa</p>
-      </li>
-      <li class="box-7">
-        <img src="images/book.jpg" alt="" width="370" />
-        <h3>Magazyn Limited Edition</h3>
-        <p>Dizajn</p>
-      </li>
-      <li class="box-8">
-        <img src="images/lable.jpg" alt="" width="370" />
-        <h3>Projekt LAB</h3>
-        <p>Marketing</p>
-      </li>
-      <li class="box-9">
-        <img src="images/laptop.jpg" alt="" width="370" />
-        <h3>Growing Business</h3>
-        <p>Aplikacja</p>
-      </li>
-    </ul>
-    <footer>
-      <a href="index.html" class="footer-logo">WebStudio</a>
-      <address>
-        <ul class="contact-bottom">
+      <div>
+        <ul class="contact-top">
           <li>
-            <a
-              class="footer-address"
-              href="https://goo.gl/maps/q48PafHFzNK1vhY7A"
-              target="_blank"
-              rel="nofollow noreferrer noopener"
-            >
-              m. Warszawa, Aleje Jerozolimskie 21</a
-            >
-          </li>
-          <li>
-            <a
-              class="footer-contact"
-              href="mailto:example@com.pl"
-              title="Send me e-mail"
+            <a class="head-address-1" href="mailto:info@devstudio.com"
               >info@devstudio.com</a
             >
           </li>
           <li>
-            <a class="footer-contact" href="tel:+48111111111" title="Call me"
-              >+48111111111</a
-            >
+            <a class="head-address-2" href="tel:+48111111111">+48111111111</a>
           </li>
         </ul>
-      </address>
+      </div>
+    </header>
+    <main>
+      <div class="filter">
+        <button class="filter-all" type="button">Wszystkie</button>
+        <button class="filter-pages" type="button">Strony</button>
+        <button class="filter-app" type="button">Aplikacje</button>
+        <button class="filter-design" type="button">Dizajn</button>
+        <button class="filter-marketing" type="button">Marketing</button>
+      </div>
+    </main>
+    <section>
+      <ul class="boxes">
+        <li class="box-1">
+          <img src="images/weblap.jpg" alt="web page" width="370" />
+          <h3 class="h3-styles">Technocrack</h3>
+          <p class="p-styles">Strona internetowa</p>
+        </li>
+        <li class="box-2">
+          <img src="images/footbal.jpg" alt="footbal" width="370" />
+          <h3 class="h3-styles">Grafika New Orlean vs Golden Star</h3>
+          <p class="p-styles">Dizajn</p>
+        </li>
+        <li class="box-3">
+          <img src="images/seafood.jpg" alt="foods" width="370" />
+          <h3 class="h3-styles">Restauracja Seafood</h3>
+          <p class="p-styles">Aplikacja</p>
+        </li>
+        <li class="box-4">
+          <img src="images/headphones.jpg" alt="headphones" width="370" />
+          <h3 class="h3-styles">Projekt Prime</h3>
+          <p class="p-styles">Marketing</p>
+        </li>
+        <li class="box-5">
+          <img src="images/cards.jpg" alt="cards" width="370" />
+          <h3 class="h3-styles">Projekt Boxes</h3>
+          <p class="p-styles">Aplikacja</p>
+        </li>
+        <li class="box-6">
+          <img src="images/monitor.jpg" alt="monitor" width="370" />
+          <h3 class="h3-styles">Inspiration has no Borders</h3>
+          <p class="p-styles">Strona internetowa</p>
+        </li>
+        <li class="box-7">
+          <img src="images/book.jpg" alt="book" width="370" />
+          <h3 class="h3-styles">Magazyn Limited Edition</h3>
+          <p class="p-styles">Dizajn</p>
+        </li>
+        <li class="box-8">
+          <img src="images/lable.jpg" alt="lable" width="370" />
+          <h3 class="h3-styles">Projekt LAB</h3>
+          <p class="p-styles">Marketing</p>
+        </li>
+        <li class="box-9">
+          <img src="images/laptop.jpg" alt="laptop" width="370" />
+          <h3 class="h3-styles">Growing Business</h3>
+          <p class="p-styles">Aplikacja</p>
+        </li>
+      </ul>
+    </section>
+    <footer>
+      <div class="footer">
+        <a href="index.html" class="footer-logo">WebStudio</a>
+        <address>
+          <ul class="contact-bottom">
+            <li>
+              <a
+                class="footer-address"
+                href="https://goo.gl/maps/q48PafHFzNK1vhY7A"
+                target="_blank"
+                rel="nofollow noreferrer noopener"
+              >
+                m. Warszawa, Aleje Jerozolimskie 21</a
+              >
+            </li>
+            <li>
+              <a
+                class="footer-email"
+                href="mailto:example@com.pl"
+                title="Send me e-mail"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li>
+              <a class="footer-contact" href="tel:+48111111111" title="Call me"
+                >+48111111111</a
+              >
+            </li>
+          </ul>
+        </address>
+      </div>
     </footer>
   </body>
 </html>
