--- a/index.html
+++ b/index.html
@@ -1,98 +1,124 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <link rel="stylesheet" href="css/styles.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Studio</title>
   </head>
   <body>
     <header>
-      <a href="index.html">WebStudio</a>
+      <a href="index.html" class="logo-top"
+        >Web<span class="logo-black">Studio</span></a
+      >
       <nav>
-        <ul>
-          <li lang="pl">
-            <a href="index.html" title="Go to Agencja">Agencja</a>
+        <ul class="navigation">
+          <li>
+            <a href="index.html" class="link">Agencja</a>
           </li>
-          <li lang="pl"><a href="portfolio.html">Portfolio</a></li>
-          <li lang="pl"><a href="#">Kontakt</a></li>
+          <li>
+            <a href="portfolio.html" class="link">Portfolio</a>
+          </li>
+          <li><a href="#" class="link">Kontakt</a></li>
         </ul>
       </nav>
-      <ul>
-        <li>
-          <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-        </li>
-        <li><a href="tel:+48111111111">+48111111111</a></li>
-      </ul>
+      <div>
+        <ul class="contact-top">
+          <li>
+            <a class="link" href="mailto:info@devstudio.com"
+              >info@devstudio.com</a
+            >
+          </li>
+          <li>
+            <a class="link" href="tel:+48111111111">+48111111111</a>
+          </li>
+        </ul>
+      </div>
     </header>
     <main>
+      <section class="order">
+        <h1>
+          <span class="order-words"
+            >EFEKTYWNE ROZWIĄZANIA DLA WASZEGO BIZNESU</span
+          >
+        </h1>
+        <button class="filter-buttom" type="button">Zamów usługe</button>
+      </section>
       <section>
-        <h1>EFEKTYWNE ROZWIĄZANIA DLA WASZEGO BIZNESU</h1>
-        <button type="button">Zamów usługe</button>
         <ul>
-          <li>
+          <li class="no-decoration">
             <h3>Lorem, ipsum.</h3>
             <p>Lorem ipsum dolor sit amet consectetur.</p>
           </li>
-          <li>
+          <li class="no-decoration">
             <h3>Lorem, ipsum.</h3>
             <p>Lorem ipsum dolor sit amet consectetur.</p>
           </li>
-          <li>
+          <li class="no-decoration">
             <h3>Lorem, ipsum.</h3>
             <p>Lorem ipsum dolor sit amet consectetur.</p>
           </li>
-          <li>
+          <li class="no-decoration">
             <h3>Lorem, ipsum.</h3>
             <p>Lorem ipsum dolor sit amet consectetur.</p>
           </li>
         </ul>
       </section>
       <section>
-        <h2>Czym się zajmujemy</h2>
+        <h2 class="h2-styles">Czym się zajmujemy</h2>
         <ul>
-          <li>
+          <li class="no-decoration">
             <img src="images/tablet.jpg" alt="tablet" width="370" />
           </li>
-          <li>
+          <li class="no-decoration">
             <img src="images/iphone.jpg" alt="box2" width="370" />
           </li>
-          <li>
+          <li class="no-decoration">
             <img src="images/imac.jpg" alt="box3" width="370" />
           </li>
         </ul>
       </section>
       <section>
-        <h2>Nasz zespół</h2>
+        <h2 class="h2-styles">Nasz zespół</h2>
         <ul>
-          <li>
+          <li class="no-decoration">
             <img src="images/man1.jpg" alt="John Doe" width="270" />
             <h3>John Doe</h3>
             <p>Product Designer</p>
           </li>
-          <li>
+          <li class="no-decoration">
             <img src="images/woman1.jpg" alt="John Doe" width="270" />
             <h3>John Doe</h3>
             <p>Frontend Developer</p>
           </li>
-          <li>
+          <li class="no-decoration">
             <img src="images/man2.jpg" alt="John Doe" width="270" />
             <h3>John Doe</h3>
             <p>Marketing</p>
           </li>
-          <li>
+          <li class="no-decoration">
             <img src="images/man3.jpg" alt="John Doe" width="270" />
-            <h3>John Doe</h3>
+            <h3 class="teams">John Doe</h3>
             <p>UI Designer</p>
           </li>
         </ul>
       </section>
     </main>
-    <footer>
-      <a href="index.html">WebStudio</a>
+    <footer class="footer">
+      <a href="index.html" class="footer-logo"
+        >Web<span class="logo-white">Studio</span></a
+      >
       <address>
-        <ul class="addres">
+        <ul class="contact-bottom">
           <li>
             <a
+              class="footer-address"
               href="https://goo.gl/maps/q48PafHFzNK1vhY7A"
               target="_blank"
               rel="nofollow noreferrer noopener"
@@ -101,11 +127,18 @@
             >
           </li>
           <li>
-            <a href="mailto:example@com.pl" title="Send me e-mail"
+            <a
+              class="footer-email"
+              href="mailto:example@com.pl"
+              title="Send me e-mail"
               >info@devstudio.com</a
             >
           </li>
-          <li><a href="tel:+48111111111" title="Call me">+48111111111</a></li>
+          <li>
+            <a class="footer-contact" href="tel:+48111111111" title="Call me"
+              >+48111111111</a
+            >
+          </li>
         </ul>
       </address>
     </footer>
