--- a/portfolio.html
+++ b/portfolio.html
@@ -15,120 +15,131 @@
   </head>
   <body>
     <header>
-      <a href="index.html" class="logo-top">WebStudio</a>
+      <a href="index.html" class="logo-top"
+        >Web<span class="logo-black">Studio</span></a
+      >
       <nav>
         <ul class="navigation">
           <li>
-            <a href="index.html" class="nav-1">Agencja</a>
+            <a href="index.html" class="link">Agencja</a>
           </li>
           <li>
-            <a href="portfolio.html" class="nav-2">Portfolio</a>
+            <a href="portfolio.html" class="link">Portfolio</a>
           </li>
-          <li><a href="#" class="nav-3">Kontakt</a></li>
+          <li><a href="#" class="link">Kontakt</a></li>
         </ul>
       </nav>
       <div>
         <ul class="contact-top">
           <li>
-            <a class="head-address-1" href="mailto:info@devstudio.com"
+            <a class="link" href="mailto:info@devstudio.com"
               >info@devstudio.com</a
             >
           </li>
           <li>
-            <a class="head-address-2" href="tel:+48111111111">+48111111111</a>
+            <a class="link" href="tel:+48111111111">+48111111111</a>
           </li>
         </ul>
       </div>
     </header>
     <main>
-      <div class="filter">
-        <button class="filter-all" type="button">Wszystkie</button>
-        <button class="filter-pages" type="button">Strony</button>
-        <button class="filter-app" type="button">Aplikacje</button>
-        <button class="filter-design" type="button">Dizajn</button>
-        <button class="filter-marketing" type="button">Marketing</button>
-      </div>
+      <h1 class="visually-hidden"></h1>
+      <section>
+        <ul>
+          <li>
+            <button class="filter-buttom" type="button">Wszystkie</button>
+          </li>
+          <li><button class="filter-buttom" type="button">Strony</button></li>
+          <li>
+            <button class="filter-buttom" type="button">Aplikacje</button>
+          </li>
+          <li><button class="filter-buttom" type="button">Dizajn</button></li>
+          <li>
+            <button class="filter-buttom" type="button">Marketing</button>
+          </li>
+        </ul>
+      </section>
+      <section>
+        <ul>
+          <li class="boxes">
+            <img src="images/weblap.jpg" alt="web page" width="370" />
+            <h3 class="h3-styles">Technocrack</h3>
+            <p class="p-styles">Strona internetowa</p>
+          </li>
+          <li class="boxes">
+            <img src="images/footbal.jpg" alt="footbal" width="370" />
+            <h3 class="h3-styles">Grafika New Orlean vs Golden Star</h3>
+            <p class="p-styles">Dizajn</p>
+          </li>
+          <li class="boxes">
+            <img src="images/seafood.jpg" alt="foods" width="370" />
+            <h3 class="h3-styles">Restauracja Seafood</h3>
+            <p class="p-styles">Aplikacja</p>
+          </li>
+          <li class="boxes">
+            <img src="images/headphones.jpg" alt="headphones" width="370" />
+            <h3 class="h3-styles">Projekt Prime</h3>
+            <p class="p-styles">Marketing</p>
+          </li>
+          <li class="boxes">
+            <img src="images/cards.jpg" alt="cards" width="370" />
+            <h3 class="h3-styles">Projekt Boxes</h3>
+            <p class="p-styles">Aplikacja</p>
+          </li>
+          <li class="boxes">
+            <img src="images/monitor.jpg" alt="monitor" width="370" />
+            <h3 class="h3-styles">Inspiration has no Borders</h3>
+            <p class="p-styles">Strona internetowa</p>
+          </li>
+          <li class="boxes">
+            <img src="images/book.jpg" alt="book" width="370" />
+            <h3 class="h3-styles">Magazyn Limited Edition</h3>
+            <p class="p-styles">Dizajn</p>
+          </li>
+          <li class="boxes">
+            <img src="images/lable.jpg" alt="lable" width="370" />
+            <h3 class="h3-styles">Projekt LAB</h3>
+            <p class="p-styles">Marketing</p>
+          </li>
+          <li class="boxes">
+            <img src="images/laptop.jpg" alt="laptop" width="370" />
+            <h3 class="h3-styles">Growing Business</h3>
+            <p class="p-styles">Aplikacja</p>
+          </li>
+        </ul>
+      </section>
     </main>
-    <section>
-      <ul class="boxes">
-        <li class="box-1">
-          <img src="images/weblap.jpg" alt="web page" width="370" />
-          <h3 class="h3-styles">Technocrack</h3>
-          <p class="p-styles">Strona internetowa</p>
-        </li>
-        <li class="box-2">
-          <img src="images/footbal.jpg" alt="footbal" width="370" />
-          <h3 class="h3-styles">Grafika New Orlean vs Golden Star</h3>
-          <p class="p-styles">Dizajn</p>
-        </li>
-        <li class="box-3">
-          <img src="images/seafood.jpg" alt="foods" width="370" />
-          <h3 class="h3-styles">Restauracja Seafood</h3>
-          <p class="p-styles">Aplikacja</p>
-        </li>
-        <li class="box-4">
-          <img src="images/headphones.jpg" alt="headphones" width="370" />
-          <h3 class="h3-styles">Projekt Prime</h3>
-          <p class="p-styles">Marketing</p>
-        </li>
-        <li class="box-5">
-          <img src="images/cards.jpg" alt="cards" width="370" />
-          <h3 class="h3-styles">Projekt Boxes</h3>
-          <p class="p-styles">Aplikacja</p>
-        </li>
-        <li class="box-6">
-          <img src="images/monitor.jpg" alt="monitor" width="370" />
-          <h3 class="h3-styles">Inspiration has no Borders</h3>
-          <p class="p-styles">Strona internetowa</p>
-        </li>
-        <li class="box-7">
-          <img src="images/book.jpg" alt="book" width="370" />
-          <h3 class="h3-styles">Magazyn Limited Edition</h3>
-          <p class="p-styles">Dizajn</p>
-        </li>
-        <li class="box-8">
-          <img src="images/lable.jpg" alt="lable" width="370" />
-          <h3 class="h3-styles">Projekt LAB</h3>
-          <p class="p-styles">Marketing</p>
-        </li>
-        <li class="box-9">
-          <img src="images/laptop.jpg" alt="laptop" width="370" />
-          <h3 class="h3-styles">Growing Business</h3>
-          <p class="p-styles">Aplikacja</p>
-        </li>
-      </ul>
-    </section>
-    <footer>
-      <div class="footer">
-        <a href="index.html" class="footer-logo">WebStudio</a>
-        <address>
-          <ul class="contact-bottom">
-            <li>
-              <a
-                class="footer-address"
-                href="https://goo.gl/maps/q48PafHFzNK1vhY7A"
-                target="_blank"
-                rel="nofollow noreferrer noopener"
-              >
-                m. Warszawa, Aleje Jerozolimskie 21</a
-              >
-            </li>
-            <li>
-              <a
-                class="footer-email"
-                href="mailto:example@com.pl"
-                title="Send me e-mail"
-                >info@devstudio.com</a
-              >
-            </li>
-            <li>
-              <a class="footer-contact" href="tel:+48111111111" title="Call me"
-                >+48111111111</a
-              >
-            </li>
-          </ul>
-        </address>
-      </div>
+    <footer class="footer">
+      <a href="index.html" class="footer-logo"
+        >Web<span class="logo-white">Studio</span></a
+      >
+      <address>
+        <ul class="contact-bottom">
+          <li>
+            <a
+              class="footer-address"
+              href="https://goo.gl/maps/q48PafHFzNK1vhY7A"
+              target="_blank"
+              rel="nofollow noreferrer noopener"
+            >
+              m. Warszawa, Aleje Jerozolimskie 21</a
+            >
+          </li>
+          <li>
+            <a
+              class="footer-email"
+              href="mailto:example@com.pl"
+              title="Send me e-mail"
+              >info@devstudio.com</a
+            >
+          </li>
+          <li>
+            <a class="footer-contact" href="tel:+48111111111" title="Call me"
+              >+48111111111</a
+            >
+          </li>
+        </ul>
+      </address>
     </footer>
   </body>
 </html>
