--- a/index.html
+++ b/index.html
@@ -54,19 +54,19 @@
         <ul>
           <li class="no-decoration">
             <h3>Lorem, ipsum.</h3>
-            <p>Lorem ipsum dolor sit amet consectetur.</p>
+            <p class="description">Lorem ipsum dolor sit amet consectetur.</p>
           </li>
           <li class="no-decoration">
             <h3>Lorem, ipsum.</h3>
-            <p>Lorem ipsum dolor sit amet consectetur.</p>
+            <p class="description">Lorem ipsum dolor sit amet consectetur.</p>
           </li>
           <li class="no-decoration">
             <h3>Lorem, ipsum.</h3>
-            <p>Lorem ipsum dolor sit amet consectetur.</p>
+            <p class="description">Lorem ipsum dolor sit amet consectetur.</p>
           </li>
           <li class="no-decoration">
             <h3>Lorem, ipsum.</h3>
-            <p>Lorem ipsum dolor sit amet consectetur.</p>
+            <p class="description">Lorem ipsum dolor sit amet consectetur.</p>
           </li>
         </ul>
       </section>
