--- a/portfolio.html
+++ b/portfolio.html
@@ -43,9 +43,8 @@
       </div>
     </header>
     <main>
-      <h1 class="visually-hidden"></h1>
       <section>
-        <ul>
+        <ul class="visually-hidden">
           <li>
             <button class="filter-buttom" type="button">Wszystkie</button>
           </li>
@@ -60,7 +59,7 @@
         </ul>
       </section>
       <section>
-        <ul>
+        <ul class="visually-hidden">
           <li class="boxes">
             <img src="images/weblap.jpg" alt="web page" width="370" />
             <h3 class="h3-styles">Technocrack</h3>
