--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <nav>
         <ul class="navigation">
           <li>
-            <a href="index.html" class="link">Agencja</a>
+            <a href="index.html" class="link current">Agencja</a>
           </li>
           <li>
             <a href="portfolio.html" class="link">Portfolio</a>
@@ -48,25 +48,42 @@
             >EFEKTYWNE ROZWIĄZANIA DLA WASZEGO BIZNESU</span
           >
         </h1>
-        <button class="filter-buttom" type="button">Zamów usługe</button>
+        <button class="order-buttom" type="button">Zamów usługe</button>
       </section>
       <section>
+        <h2 class="visually-hidden">Lorem ipsum</h2>
         <ul>
           <li class="no-decoration">
-            <h3>Lorem, ipsum.</h3>
-            <p class="description">Lorem ipsum dolor sit amet consectetur.</p>
+            <h3>Lorem ipsum</h3>
+            <p class="description">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum sed
+              non adipisci accusantium. Eligendi est dolorum ipsum beatae
+              tenetur pariatur. Asperiores, suscipit.
+            </p>
           </li>
           <li class="no-decoration">
-            <h3>Lorem, ipsum.</h3>
-            <p class="description">Lorem ipsum dolor sit amet consectetur.</p>
+            <h3>Lorem ipsum</h3>
+            <p class="description">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum sed
+              non adipisci accusantium. Eligendi est dolorum ipsum beatae
+              tenetur pariatur. Asperiores, suscipit.
+            </p>
           </li>
           <li class="no-decoration">
-            <h3>Lorem, ipsum.</h3>
-            <p class="description">Lorem ipsum dolor sit amet consectetur.</p>
+            <h3>Lorem ipsum</h3>
+            <p class="description">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum sed
+              non adipisci accusantium. Eligendi est dolorum ipsum beatae
+              tenetur pariatur. Asperiores, suscipit.
+            </p>
           </li>
           <li class="no-decoration">
-            <h3>Lorem, ipsum.</h3>
-            <p class="description">Lorem ipsum dolor sit amet consectetur.</p>
+            <h3>Lorem ipsum</h3>
+            <p class="description">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum sed
+              non adipisci accusantium. Eligendi est dolorum ipsum beatae
+              tenetur pariatur. Asperiores, suscipit.
+            </p>
           </li>
         </ul>
       </section>
@@ -84,28 +101,28 @@
           </li>
         </ul>
       </section>
-      <section>
+      <section class="teams-background">
         <h2 class="h2-styles">Nasz zespół</h2>
         <ul>
           <li class="no-decoration">
             <img src="images/man1.jpg" alt="John Doe" width="270" />
             <h3>John Doe</h3>
-            <p>Product Designer</p>
+            <p class="teams-p">Product Designer</p>
           </li>
           <li class="no-decoration">
             <img src="images/woman1.jpg" alt="John Doe" width="270" />
             <h3>John Doe</h3>
-            <p>Frontend Developer</p>
+            <p class="teams-p">Frontend Developer</p>
           </li>
           <li class="no-decoration">
             <img src="images/man2.jpg" alt="John Doe" width="270" />
             <h3>John Doe</h3>
-            <p>Marketing</p>
+            <p class="teams-p">Marketing</p>
           </li>
           <li class="no-decoration">
             <img src="images/man3.jpg" alt="John Doe" width="270" />
             <h3 class="teams">John Doe</h3>
-            <p>UI Designer</p>
+            <p class="teams-p">UI Designer</p>
           </li>
         </ul>
       </section>
