--- a/portfolio.html
+++ b/portfolio.html
@@ -24,7 +24,7 @@
             <a href="index.html" class="link">Agencja</a>
           </li>
           <li>
-            <a href="portfolio.html" class="link">Portfolio</a>
+            <a href="portfolio.html" class="link current">Portfolio</a>
           </li>
           <li><a href="#" class="link">Kontakt</a></li>
         </ul>
@@ -44,7 +44,8 @@
     </header>
     <main>
       <section>
-        <ul class="visually-hidden">
+        <h1 class="visually-hidden">Portfolio</h1>
+        <ul class="no-decoration">
           <li>
             <button class="filter-buttom" type="button">Wszystkie</button>
           </li>
@@ -57,9 +58,7 @@
             <button class="filter-buttom" type="button">Marketing</button>
           </li>
         </ul>
-      </section>
-      <section>
-        <ul class="visually-hidden">
+        <ul>
           <li class="boxes">
             <img src="images/weblap.jpg" alt="web page" width="370" />
             <h3 class="h3-styles">Technocrack</h3>
