--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         <h2 class="visually-hidden">Lorem ipsum</h2>
         <ul>
           <li class="no-decoration">
-            <h3>Lorem ipsum</h3>
+            <h3 class="lorem">Lorem ipsum</h3>
             <p class="description">
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum sed
               non adipisci accusantium. Eligendi est dolorum ipsum beatae
@@ -62,7 +62,7 @@
             </p>
           </li>
           <li class="no-decoration">
-            <h3>Lorem ipsum</h3>
+            <h3 class="lorem">Lorem ipsum</h3>
             <p class="description">
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum sed
               non adipisci accusantium. Eligendi est dolorum ipsum beatae
@@ -70,7 +70,7 @@
             </p>
           </li>
           <li class="no-decoration">
-            <h3>Lorem ipsum</h3>
+            <h3 class="lorem">Lorem ipsum</h3>
             <p class="description">
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum sed
               non adipisci accusantium. Eligendi est dolorum ipsum beatae
@@ -78,7 +78,7 @@
             </p>
           </li>
           <li class="no-decoration">
-            <h3>Lorem ipsum</h3>
+            <h3 class="lorem">Lorem ipsum</h3>
             <p class="description">
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum sed
               non adipisci accusantium. Eligendi est dolorum ipsum beatae
@@ -106,17 +106,17 @@
         <ul>
           <li class="no-decoration">
             <img src="images/man1.jpg" alt="John Doe" width="270" />
-            <h3>John Doe</h3>
+            <h3 class="teams">John Doe</h3>
             <p class="teams-p">Product Designer</p>
           </li>
           <li class="no-decoration">
             <img src="images/woman1.jpg" alt="John Doe" width="270" />
-            <h3>John Doe</h3>
+            <h3 class="teams">John Doe</h3>
             <p class="teams-p">Frontend Developer</p>
           </li>
           <li class="no-decoration">
             <img src="images/man2.jpg" alt="John Doe" width="270" />
-            <h3>John Doe</h3>
+            <h3 class="teams">John Doe</h3>
             <p class="teams-p">Marketing</p>
           </li>
           <li class="no-decoration">
